style.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

*{
    padding: 0;
    margin:0;
    box-sizing: border-box;
}
body{
    background-image: url(assets/background1.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
}
header li, header a, header button, .side p, .side{
    font-family: 'Lato', sans-serif;
    color:#FFFFFF;
    text-decoration: none;
}
header{
    display:flex;
    justify-content:space-evenly;
    align-items:center;
    padding:30px 0;
}
.logo{
    cursor: pointer;
    width:250px;
    height:auto;
}
.hamburger{
    width:60px;
    height: auto;
}
.open-slide{
    display:none;
}
.nav_links{
    list-style: none;
}
.nav_links li{
    display:inline-block;
    padding:8px 15px;
}
.nav_links li a, .fa-shopping-cart, .name{
    font-size: 1rem;
    cursor: pointer;
    transition: all 0.3s ease 0s;
}
.nav_links li a:hover, .fa-shopping-cart:hover, .name:hover{
    color:#EF5477;
}
.avatar{
    vertical-align: middle;
    width: 50px;
    height: 50px;
    border-radius: 50%;
}
.side{
    display:flex;
    align-items:center;
    justify-content: space-around;
}
.side li, .side img, .side .name{
    margin:0 5%;
}

.side-nav{
    height: 100%;
    width: 0;
    position:fixed;
    z-index: 1;
    top:0;
    left:0;
    background:rgba(255,255,255,0.03);
    backdrop-filter: blur(16px);
    overflow-x:hidden;
    padding-top:60px;
    border-top-right-radius: 18px;
    transition: all 0.5s ease 0s;
}

.side-nav a{
    font-size: 1.2rem;
    padding:20px 10px 10px 40px;
    text-decoration: none;
    cursor: pointer;
    display: block;
    transition: all 0.3s ease 0s;
}
.side-nav a:hover{
    color:#EF5477;
}

.side-nav .btn-close{
    position:absolute;
    top:0;
    right:22px;
    font-size:36px;
    margin-left: 50px;
}

.hero{
    display:flex;
    justify-content:space-around;
    padding-top: 50px;

}
.hero p{
    flex: 0.7;
    align-self: flex-end;
    color:white;
    font-family: 'Open Sans', sans-serif;
    font-weight:700;
    font-size:0.8rem;
}
.card{
    height:520px;
    width:350px;
    border-radius:20px;
    background-color:rgba(0,0,0,0.35);
    font-family: 'Open Sans', sans-serif;
    display:flex;
    flex-direction:column;
    justify-content:space-evenly;
    padding: 100px 0;
    align-items:center;
}

.card > .top > h3{
    color:white;
    font-size:1.8rem;
    text-align:center;
    letter-spacing:2.5px;
    margin-bottom:1rem;
}

.card > .top > h4{
    color:white;
    font-size:1.1rem;
    text-align:center;
}
.card > .bottom > .sub{
    color:#A4D90F;
    font-weight: 700;
    text-align:center;
    cursor: pointer;
}
.card > .bottom > .sub:hover{
    color:#fff;
}
.game_pass{
    color: white;
    display:flex;
    justify-content:center;
    align-items:center;
    margin-bottom:1rem;
}
.game_pass .pass_bold{
    font-weight: 700;
}
.xbox_logo{
    width:30px;
    margin-right: 5px;
}

.card > .preorder{
    background-color:#A4D90F;
    color:#264B01;
    padding: 10px;
    border: none;
    border-radius:50px;
    outline: none;
    font-size:1rem;
    font-weight: 700;
    width:50%;
    cursor:pointer;
    transition: all 0.3s ease 0s;
}
.card > .preorder:hover{
    background-color:transparent;
    color: #A4D90F;
    border: 1px solid #A4D90F;
    border-radius:0px;
}

@media (max-width:962px){
    nav{
        display:none;
    }
    .open-slide{
        display: block;
    }
}

@media (max-width:762px){
    .side{
        display:none;
    }
    .logo{
        width:190px;
    }
    .hero{
        flex-direction: column-reverse;
        align-items:center;
        justify-content:space-around;
        padding-top: 0;
    }
    .card{
        padding:0;
        height:320px;
        width:290px;
    }
    .hero p{
        font-size:0.5rem;
        align-self:center;
        margin-top: 70px;
        padding-left: 50px;
        padding-right: 50px;
    }
    
    .card > .top > h3{
        font-size:1.5rem;
    }

    .card > .top > h4{
        color:white;
        font-size:0.9rem;
        text-align:center;
    }
    .card > .bottom > .sub{
        font-size:0.8rem;
    }
    body{
        height: 120vh;
    }
}

